[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "uenv"
version = "0.0.1"
authors = [
  { name="Viet Hung Nguyen", email="hvn@familug.org" },
]
description = "A simple .env reader"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hvnsweeting/uenv"
"Bug Tracker" = "https://github.com/hvnsweeting/uenv/issues"
